fix horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,7 @@
   position: absolute;
   top: 7px;
   left: 1px;
-  width: 100%;
+  width: calc(100% - 1px);
   height: 100%;
   display: flex;
   align-items: center;
